# vue-llm-sse

./: .gitignore  README.md
backend/: main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/components/: ChatInterface.vue
